Created currencies screen ui with custom drop down menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Exchange Rate Tracker</string>
+    <string name="currencies">Currencies</string>
+    <string name="favorites">Favorites</string>
 </resources>
